# challenge

./: .isort.cfg  SQL-task.md
tweeter_stat/: .pre-commit-config.yaml  README.md  const.py  dbase.py  main.py  pyproject.toml  requirements.txt  sentiment.py  tweets.sqlite  twitter.py
