[tool.poetry]
name = "tweeter_stat"
version = "0.1.0"
description = ""
authors = ["Roman Chesnokov <66942939+chessnocow@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
tweepy = "^4.10.1"
pandas = "^1.5.0"
textblob = "^0.17.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
